FE&BE Add SC list and part of SC details
Next to map there are small containers with important info about SC.
Added name, address and images to SC details under the map